--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tanstack/react-query": "^5.59.16",
     "@types/node": "^22.7.9",
     "@types/react": "^18.3.12",
     "autoprefixer": "^10.4.20",
